// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCellBody ACT theme matches the snapshot 1`] = `
<tr>
  <td
    class="MuiTableCell-root makeStyles-tableCellRoot-1 MuiTableCell-paddingNone"
    role="cell"
  >
    TableCell
  </td>
</tr>
`;

exports[`TableCellBody ACT_ET theme matches the snapshot 1`] = `
<tr>
  <td
    class="MuiTableCell-root makeStyles-tableCellRoot-2 MuiTableCell-paddingNone"
    role="cell"
  >
    TableCell
  </td>
</tr>
`;
